# aionix

./: .env  .env.example  Cargo.toml  LICENSE  PROJECT_STATUS.md  README.md  config.toml  test_swagger.md
.kiro/specs/enterprise-ai-studio/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: api-structure.md  configuration.md  database-management.md  features.md  middleware-usage.md  task-3.4-summary.md  tenant-management.md
examples/plugins/: PLUGIN_SYSTEM_SUMMARY.md
examples/plugins/basic_tools/file_operations/: Cargo.toml  README.md
examples/plugins/basic_tools/file_operations/examples/: basic_usage.rs
examples/plugins/basic_tools/file_operations/src/: lib.rs
examples/plugins/basic_tools/http_client/: Cargo.toml  README.md
examples/plugins/basic_tools/http_client/examples/: basic_requests.rs
examples/plugins/basic_tools/http_client/src/: lib.rs
examples/plugins/docs/: api_reference.md  best_practices.md
examples/plugins/testing/: plugin_test_example.rs  test_framework.rs
scripts/: dev-start.ps1
src/: health.rs  lib.rs  main.rs
src/ai/: agent_runtime.rs  chunker.rs  client.rs  document_processor.rs  health.rs  mod.rs  models.rs  rag_engine.rs  rig_client.rs  tests.rs  tool_loader.rs  tool_manager.rs  vector_search.rs  workflow_engine.rs  workflow_executor.rs
src/ai/tools/: calculator_tool.rs  file_tool.rs  http_tool.rs  mod.rs  search_tool.rs
src/api/: extractors.rs  handlers.rs  middleware.rs  mod.rs  models.rs  responses.rs  routes.rs
src/api/handlers/: agent.rs  auth.rs  document.rs  health.rs  knowledge_base.rs  mod.rs  monitoring.rs  plugin.rs  qa.rs  quota.rs  rate_limit.rs  tenant.rs  tool.rs  version.rs  workflow.rs
src/api/middleware/: access_control.rs  auth.rs  mod.rs  quota.rs  rate_limit.rs  tenant.rs
src/config/: loader.rs  mod.rs  settings.rs  tests.rs  validator.rs
src/db/: cli.rs  connection.rs  health.rs  migrations.rs  mod.rs  tests.rs
src/db/entities/: agent.rs  agent_execution.rs  api_key.rs  document.rs  document_chunk.rs  embedding.rs  knowledge_base.rs  mod.rs  prelude.rs  session.rs  step_execution.rs  tenant.rs  user.rs  workflow.rs  workflow_execution.rs
src/db/migrations/: backup.rs  migrations.rs  mod.rs  seed_data.rs  tenant_filter.rs
src/db/repositories/: agent.rs  document.rs  document_chunk.rs  embedding.rs  knowledge_base.rs  mod.rs  session.rs  tenant.rs  user.rs  workflow.rs
src/errors/: middleware.rs  mod.rs  response.rs  tests.rs  types.rs
src/logging/: context.rs  filters.rs  mod.rs  setup.rs  tests.rs
src/plugins/: lifecycle.rs  mod.rs  plugin_interface.rs  plugin_loader.rs  plugin_manager.rs  plugin_registry.rs
src/services/: agent.rs  ai.rs  auth.rs  knowledge_base.rs  mod.rs  monitoring.rs  notification.rs  plugin.rs  qa_quality.rs  quota.rs  rate_limit.rs  task_queue.rs  tenant.rs  tenant_test.rs
