[package]
name = "aionix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
config = "0.13"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
utoipa = { version = "4", features = ["actix_extras"] } # 用于 API 文档 (可选，但推荐)
utoipa-swagger-ui = { version = "6", features = ["actix-web"] } # API 文档 UI
aionix-common = { path = "./packages/common" }
# 基础依赖
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"