[package]
name = "aionix"
version = "0.1.0"
edition = "2021"
authors = ["Aionix Team"]
description = "企业级 AI Studio - 基于 Rust 的多租户 AI 问答系统"
license = "MIT"
repository = "https://github.com/aionix/aionix"

[workspace]
members = ["packages/common"]

[features]
default = ["postgres", "redis", "ai"]
postgres = ["sea-orm/sqlx-postgres", "sqlx/postgres"]
sqlite = ["sea-orm/sqlx-sqlite", "sqlx/sqlite"]
redis = ["dep:redis"]
ai = ["dep:rig-core"]
vector = ["pgvector"]

[dependencies]
# Web 框架
actix-web = "4"
actix-web-httpauth = "0.8"
actix-cors = "0.7"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
dotenvy = "0.15"
config = "0.13"

# 数据库和 ORM
sea-orm = { version = "^0.12.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono", "with-json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.3", optional = true }

# Redis 客户端
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

# AI 框架 (Rig)
rig-core = { version = "0.1", optional = true }

# API 文档
utoipa = { version = "4", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }

# 基础依赖
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
env_logger = "0.10"

# 安全和加密
bcrypt = "0.15"
jsonwebtoken = "9.0"
rand = "0.8"

# 工具库
futures = "0.3"
async-trait = "0.1"
once_cell = "1.0"
lazy_static = "1.4"

# 本地包
aionix-common = { path = "./packages/common" }